--- a/css/mingle-project.css
+++ b/css/mingle-project.css
@@ -113,20 +113,17 @@
 }
 
 .video-container {
+    width: 600px;
+    height: 400px;
+    margin: 0 auto 15px auto;
     position: relative;
-    width: 100%;
-    height: 0;
-    padding-bottom: 56.25%;
-    margin-bottom: 15px;
 }
 
 .video-container iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
+    width: 600px;
+    height: 400px;
     border-radius: 8px;
+    border: none;
 }
 
 .video-description {
