--- a/css/michael-smerconish.css
+++ b/css/michael-smerconish.css
@@ -233,7 +233,7 @@ body {
     font-size: 1rem;
 }
 
-.video-container {
+.smerconish-video-container {
     position: relative;
     width: 100%;
     height: 0;
@@ -244,7 +244,7 @@ body {
     box-shadow: 0 15px 35px rgba(0, 0, 0, 0.3);
 }
 
-.video-container iframe {
+.smerconish-video-container iframe {
     position: absolute;
     top: 0;
     left: 0;
